Chandinged to the exsitsing webserver.

--- a/Assignment2/WebServer/build.gradle
+++ b/Assignment2/WebServer/build.gradle
@@ -24,4 +24,10 @@ task FunWebServer(type: JavaExec) {
   standardInput = System.in
 }
 
+dependencies {
+    implementation 'org.json:json:20210307'
+}
 
+repositories {
+    mavenCentral()
+}
