Adding stuff for task 3.1

--- a/Assignment3/Assign3-1/build.gradle
+++ b/Assignment3/Assign3-1/build.gradle
@@ -32,6 +32,7 @@ task Client(type: JavaExec) {
   classpath = sourceSets.main.runtimeClasspath
 
   main = 'SockClient'
-  args "localhost"
+  args "52.15.227.232"
+ // args "localhost"
   args 8888
 }
